--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-  "postbuild": "cp build/index.html build/404.html"
+  "postbuild": "cp dist/index.html dist/404.html"
+
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
